--- a/front/src/assets/scss/_colors.scss
+++ b/front/src/assets/scss/_colors.scss
@@ -3,3 +3,6 @@ $main-color-50: #008766;
 $main-color-60: #00a47c;
 $main-color-70: #00c293;
 $main-color-80: #34dfad;
+
+$alert-color-40: #c00012;
+$alert-color-80: #ffb4ab;
