--- a/front/src/assets/scss/_colors.scss
+++ b/front/src/assets/scss/_colors.scss
@@ -1,8 +1,10 @@
-$main-color-40: #006c50;
-$main-color-50: #008766;
-$main-color-60: #00a47c;
-$main-color-70: #00c293;
-$main-color-80: #34dfad;
+$main-color-30: #00513c; // containeur dark
+$main-color-40: #006c50; // button light
+$main-color-50: #008766; // button:hover light
+$main-color-60: #00a47c; // button:active dark & light
+$main-color-70: #00c293; // button:hover dark
+$main-color-80: #34dfad; // button dark
+$main-color-90: #7bf9cb; // containeur light
 
-$alert-color-40: #c00012;
-$alert-color-80: #ffb4ab;
+$alert-color-40: #c00012; // alert light
+$alert-color-80: #ffb4ab; // alert dark
