création couleurs transparente

--- a/front/src/assets/scss/_colors.scss
+++ b/front/src/assets/scss/_colors.scss
@@ -8,3 +8,7 @@ $main-color-90: #7bf9cb; // containeur light
 
 $alert-color-40: #c00012; // alert light
 $alert-color-80: #ffb4ab; // alert dark
+
+$transparent-00: rgba(0, 0, 0, 0);
+$transparent-10: rgba(0, 0, 0, 0.1);
+$transparent-20: rgba(0, 0, 0, 0.2);
