Front component ModalBottomSheet + modification _colors.scss

--- a/front/src/assets/scss/_colors.scss
+++ b/front/src/assets/scss/_colors.scss
@@ -8,3 +8,15 @@ $main-color-90: #7bf9cb; // containeur light
 
 $alert-color-40: #c00012; // alert light
 $alert-color-80: #ffb4ab; // alert dark
+
+// Gray
+$neutral-color-10: #151D19; // bg dark
+$neutral-color-40: #57615B; // button light
+$neutral-color-50: #707974; // button:hover light
+$neutral-color-60: #89938D; // button:active dark & light
+$neutral-color-70: #A4ADA7; // button:hover dark
+$neutral-color-80: #BFC9C2; // button dark
+$neutral-color-98: #F2FCF5; // bg light
+
+//Green
+
