--- a/front/src/assets/scss/_colors.scss
+++ b/front/src/assets/scss/_colors.scss
@@ -9,10 +9,7 @@ $main-color-90: #7bf9cb; // containeur light
 $alert-color-40: #c00012; // alert light
 $alert-color-80: #ffb4ab; // alert dark
 
-$dark-00: rgba(0, 0, 0, 0);
-$dark-10: rgba(0, 0, 0, 0.1);
-$dark-20: rgba(0, 0, 0, 0.2);
-
-$light-00: rgba(255, 255, 255, 0);
-$light-10: rgba(255, 255, 255, 0.1);
-$light-20: rgba(255, 255, 255, 0.2);
+$neutral-color-95: #e9f3ec;
+$neutral-color-90: #dbe5de;
+$neutral-color-30: #404944;
+$neutral-color-20: #29322e;
