ajout couleurs hover et active card

--- a/front/src/assets/scss/_colors.scss
+++ b/front/src/assets/scss/_colors.scss
@@ -1,3 +1,5 @@
+$main-color-10: #003828; // containeur:active dark
+$main-color-20: #003828; // containeur:hover dark
 $main-color-30: #00513c; // containeur dark
 $main-color-40: #006c50; // button light
 $main-color-50: #008766; // button:hover light
@@ -5,6 +7,8 @@ $main-color-60: #00a47c; // button:active dark & light
 $main-color-70: #00c293; // button:hover dark
 $main-color-80: #34dfad; // button dark
 $main-color-90: #7bf9cb; // containeur light
+$main-color-95: #bcffe2; // containeur:hover light
+$main-color-98: #e7fff2; // containeur:active light
 
 $alert-color-40: #c00012; // alert light
 $alert-color-80: #ffb4ab; // alert dark
