Front transitions couleurs des éléments cliquables (#17)

--- a/front/src/assets/scss/_colors.scss
+++ b/front/src/assets/scss/_colors.scss
@@ -1,3 +1,5 @@
+$main-color-10: #003828; // containeur:active dark
+$main-color-20: #003828; // containeur:hover dark
 $main-color-30: #00513c; // containeur dark
 $main-color-40: #006c50; // button light
 $main-color-50: #008766; // button:hover light
@@ -5,18 +7,20 @@ $main-color-60: #00a47c; // button:active dark & light
 $main-color-70: #00c293; // button:hover dark
 $main-color-80: #34dfad; // button dark
 $main-color-90: #7bf9cb; // containeur light
+$main-color-95: #bcffe2; // containeur:hover light
+$main-color-98: #e7fff2; // containeur:active light
 
 $alert-color-40: #c00012; // alert light
 $alert-color-80: #ffb4ab; // alert dark
 
-// Gray
 $neutral-color-10: #151D19; // bg dark
+$neutral-color-20: #29322e; // containerTransparent:active dark
+$neutral-color-30: #404944; // containerTransparent:hover dark
 $neutral-color-40: #57615B; // button light
 $neutral-color-50: #707974; // button:hover light
 $neutral-color-60: #89938D; // button:active dark & light
 $neutral-color-70: #A4ADA7; // button:hover dark
 $neutral-color-80: #BFC9C2; // button dark
+$neutral-color-90: #dbe5de; // containerTransparent:hover light
+$neutral-color-95: #e9f3ec; // containerTransparent:active light
 $neutral-color-98: #F2FCF5; // bg light
-
-//Green
-
