add dynamic color to text

--- a/front/src/assets/scss/_colors.scss
+++ b/front/src/assets/scss/_colors.scss
@@ -13,7 +13,7 @@ $main-color-98: #e7fff2; // containeur:active light
 $alert-color-40: #c00012; // alert light
 $alert-color-80: #ffb4ab; // alert dark
 
-$neutral-color-10: #151D19; // bg dark
+$neutral-color-10: #151D19; // bg dark - textlight
 $neutral-color-20: #29322e; // containerTransparent:active dark
 $neutral-color-30: #404944; // containerTransparent:hover dark
 $neutral-color-40: #57615B; // button light
@@ -23,4 +23,4 @@ $neutral-color-70: #A4ADA7; // button:hover dark
 $neutral-color-80: #BFC9C2; // button dark
 $neutral-color-90: #dbe5de; // containerTransparent:hover light
 $neutral-color-95: #e9f3ec; // containerTransparent:active light
-$neutral-color-98: #F2FCF5; // bg light
+$neutral-color-98: #F2FCF5; // bg light - textdark
