--- a/front/src/assets/scss/_colors.scss
+++ b/front/src/assets/scss/_colors.scss
@@ -1,26 +1,44 @@
-$main-color-10: #003828; // containeur:active dark
-$main-color-20: #003828; // containeur:hover dark
-$main-color-30: #00513c; // containeur dark
-$main-color-40: #006c50; // button light
-$main-color-50: #008766; // button:hover light
-$main-color-60: #00a47c; // button:active dark & light
-$main-color-70: #00c293; // button:hover dark
-$main-color-80: #34dfad; // button dark
-$main-color-90: #7bf9cb; // containeur light
-$main-color-95: #bcffe2; // containeur:hover light
-$main-color-98: #e7fff2; // containeur:active light
+// LIGHT
 
-$alert-color-40: #c00012; // alert light
-$alert-color-80: #ffb4ab; // alert dark
+  // BACKGROUND
 
-$neutral-color-10: #151D19; // bg dark - textlight
-$neutral-color-20: #29322e; // containerTransparent:active dark
-$neutral-color-30: #404944; // containerTransparent:hover dark
-$neutral-color-40: #57615B; // button light
-$neutral-color-50: #707974; // button:hover light
-$neutral-color-60: #89938D; // button:active dark & light
-$neutral-color-70: #A4ADA7; // button:hover dark
-$neutral-color-80: #BFC9C2; // button dark
-$neutral-color-90: #dbe5de; // containerTransparent:hover light
-$neutral-color-95: #e9f3ec; // containerTransparent:active light
-$neutral-color-98: #F2FCF5; // bg light - textdark
+  $bg-primary : #f4fff7;
+  $bg-primary-hover : #eaf6ee;
+  $bg-primary-active : #becec6;
+
+  $bg-secondary : #cfe9da;
+  $bg-secondary-hover : #ddf7e8;
+  $bg-secondary-active : #e7fff2;
+
+
+  // TEXTE
+
+  $text-primary : #002116;
+  // $text-primary-hover : #003828;
+  // $text-primary-active : #003828;
+
+  $text-secondary : #4c6358;
+  $text-secondary-hover : #647c71;
+  $text-secondary-active : #7e968a;
+
+
+  // BUTTON / ALERT
+  $bg-button : #006c4f;
+  $bg-button-hover : #008865;
+  $bg-button-active : #00a47b;
+
+  $bg-alert : #ba1a1a;
+  // $bg-alert-hover : n'existe pas
+  // $bg-alert-active : n'existe pas
+
+  $text-button-alert : #ffffff;
+  // $text-secondary-hover : n'existe pas
+  // $text-secondary-active : n'existe pas
+
+
+  // BORDURE
+
+  $border : #707974;
+
+
+
