--- a/front/src/assets/scss/_colors.scss
+++ b/front/src/assets/scss/_colors.scss
@@ -2,43 +2,84 @@
 
   // BACKGROUND
 
-  $bg-primary : #f4fff7;
-  $bg-primary-hover : #eaf6ee;
-  $bg-primary-active : #becec6;
+  $light-bg-primary : #f4fff7;
+  $light-bg-primary-hover : #eaf6ee;
+  $light-bg-primary-active : #becec6;
 
-  $bg-secondary : #cfe9da;
-  $bg-secondary-hover : #ddf7e8;
-  $bg-secondary-active : #e7fff2;
+  $light-bg-secondary : #cfe9da;
+  $light-bg-secondary-hover : #ddf7e8;
+  $light-bg-secondary-active : #e7fff2;
 
 
   // TEXTE
 
-  $text-primary : #002116;
-  // $text-primary-hover : #003828;
-  // $text-primary-active : #003828;
+  $light-text-primary : #002116;
+  // $light-text-primary-hover : #003828;
+  // $light-text-primary-active : #003828;
 
-  $text-secondary : #4c6358;
-  $text-secondary-hover : #647c71;
-  $text-secondary-active : #7e968a;
+  $light-text-secondary : #4c6358;
+  $light-text-secondary-hover : #647c71;
+  $light-text-secondary-active : #7e968a;
 
 
   // BUTTON / ALERT
-  $bg-button : #006c4f;
-  $bg-button-hover : #008865;
-  $bg-button-active : #00a47b;
+  $light-bg-button : #006c4f;
+  $light-bg-button-hover : #008865;
+  $light-bg-button-active : #00a47b;
 
-  $bg-alert : #ba1a1a;
-  // $bg-alert-hover : n'existe pas
-  // $bg-alert-active : n'existe pas
+  $light-bg-alert : #ba1a1a;
+  // $light-bg-alert-hover : n'existe pas
+  // $light-bg-alert-active : n'existe pas
 
-  $text-button-alert : #ffffff;
-  // $text-secondary-hover : n'existe pas
-  // $text-secondary-active : n'existe pas
+  $light-text-button-alert : #ffffff;
+  // $light-text-secondary-hover : n'existe pas
+  // $light-text-secondary-active : n'existe pas
 
 
   // BORDURE
 
-  $border : #707974;
+  $light-border : #707974;
 
 
 
+// LIGHT
+
+  // DARK
+
+  $dark-bg-primary : #f4fff7;
+  $dark-bg-primary-hover : #eaf6ee;
+  $dark-bg-primary-active : #becec6;
+
+  $dark-bg-secondary : #cfe9da;
+  $dark-bg-secondary-hover : #ddf7e8;
+  $dark-bg-secondary-active : #e7fff2;
+
+
+  // TEXTE
+
+  $dark-text-primary : #002116;
+  // $dark-text-primary-hover : #003828;
+  // $dark-text-primary-active : #003828;
+
+  $dark-text-secondary : #4c6358;
+  $dark-text-secondary-hover : #647c71;
+  $dark-text-secondary-active : #7e968a;
+
+
+  // BUTTON / ALERT
+  $dark-bg-button : #006c4f;
+  $dark-bg-button-hover : #008865;
+  $dark-bg-button-active : #00a47b;
+
+  $dark-bg-alert : #ba1a1a;
+  // $dark-bg-alert-hover : n'existe pas
+  // $dark-bg-alert-active : n'existe pas
+
+  $dark-text-button-alert : #ffffff;
+  // $dark-text-secondary-hover : n'existe pas
+  // $dark-text-secondary-active : n'existe pas
+
+
+  // BORDURE
+
+  $dark-border : #707974;
