--- a/front/src/assets/scss/_colors.scss
+++ b/front/src/assets/scss/_colors.scss
@@ -1,85 +1,130 @@
 // LIGHT
 
+// BACKGROUND
+
+$light-bg-primary : #f4fff7;
+$light-bg-primary-hover : #eaf6ee;
+$light-bg-primary-active : #becec6;
+
+$light-bg-secondary : #cfe9da;
+$light-bg-secondary-hover : #ddf7e8;
+$light-bg-secondary-active : #e7fff2;
+
+
+// TEXTE
+
+$light-text-primary : #002116;
+// $light-text-primary-hover : #003828;
+// $light-text-primary-active : #003828;
+
+$light-text-secondary : #4c6358;
+$light-text-secondary-hover : #647c71;
+$light-text-secondary-active : #7e968a;
+
+
+// BUTTON / ALERT
+$light-bg-button : #006c4f;
+$light-bg-button-hover : #008865;
+$light-bg-button-active : #00a47b;
+
+$light-bg-alert : #ba1a1a;
+// $light-bg-alert-hover : n'existe pas
+// $light-bg-alert-active : n'existe pas
+
+$light-text-button-alert : #ffffff;
+// $light-text-secondary-hover : n'existe pas
+// $light-text-secondary-active : n'existe pas
+
+
+// BORDURE
+
+$light-border : #707974;
+
+
+
+// DARK
+
   // BACKGROUND
 
-  $light-bg-primary : #f4fff7;
-  $light-bg-primary-hover : #eaf6ee;
-  $light-bg-primary-active : #becec6;
+  $dark-bg-primary : #191c1a;
+  $dark-bg-primary-hover : #212422;
+  $dark-bg-primary-active : #444945;
 
-  $light-bg-secondary : #cfe9da;
-  $light-bg-secondary-hover : #ddf7e8;
-  $light-bg-secondary-active : #e7fff2;
-
-
-  // TEXTE
-
-  $light-text-primary : #002116;
-  // $light-text-primary-hover : #003828;
-  // $light-text-primary-active : #003828;
-
-  $light-text-secondary : #4c6358;
-  $light-text-secondary-hover : #647c71;
-  $light-text-secondary-active : #7e968a;
-
-
-  // BUTTON / ALERT
-  $light-bg-button : #006c4f;
-  $light-bg-button-hover : #008865;
-  $light-bg-button-active : #00a47b;
-
-  $light-bg-alert : #ba1a1a;
-  // $light-bg-alert-hover : n'existe pas
-  // $light-bg-alert-active : n'existe pas
-
-  $light-text-button-alert : #ffffff;
-  // $light-text-secondary-hover : n'existe pas
-  // $light-text-secondary-active : n'existe pas
-
-
-  // BORDURE
-
-  $light-border : #707974;
-
-
-
-// LIGHT
-
-  // DARK
-
-  $dark-bg-primary : #f4fff7;
-  $dark-bg-primary-hover : #eaf6ee;
-  $dark-bg-primary-active : #becec6;
-
-  $dark-bg-secondary : #cfe9da;
-  $dark-bg-secondary-hover : #ddf7e8;
-  $dark-bg-secondary-active : #e7fff2;
+  $dark-bg-secondary : #354b41;
+  $dark-bg-secondary-hover : #2a4036;
+  $dark-bg-secondary-active : #1f352b;
 
 
   // TEXTE
 
-  $dark-text-primary : #002116;
+  $dark-text-primary : #5dfcc6;
   // $dark-text-primary-hover : #003828;
   // $dark-text-primary-active : #003828;
 
-  $dark-text-secondary : #4c6358;
-  $dark-text-secondary-hover : #647c71;
+  $dark-text-secondary : #b3ccbf;
+  $dark-text-secondary-hover : #98b1a4;
   $dark-text-secondary-active : #7e968a;
 
 
   // BUTTON / ALERT
-  $dark-bg-button : #006c4f;
-  $dark-bg-button-hover : #008865;
+  $dark-bg-button : #36dfab;
+  $dark-bg-button-hover : #00c291;
   $dark-bg-button-active : #00a47b;
 
-  $dark-bg-alert : #ba1a1a;
+  $dark-bg-alert : #ffb4ab;
   // $dark-bg-alert-hover : n'existe pas
   // $dark-bg-alert-active : n'existe pas
 
-  $dark-text-button-alert : #ffffff;
+  $dark-text-button-alert : #003828;
   // $dark-text-secondary-hover : n'existe pas
   // $dark-text-secondary-active : n'existe pas
 
 
   // BORDURE
 
-  $dark-border : #707974;
+  $dark-border : #89938d;
+
+  
+
+
+// DARK
+
+  // BACKGROUND
+
+  // $light-bg-primary : #191c1a;
+  // $light-bg-primary-hover : #212422;
+  // $light-bg-primary-active : #444945;
+
+  // $light-bg-secondary : #354b41;
+  // $light-bg-secondary-hover : #2a4036;
+  // $light-bg-secondary-active : #1f352b;
+
+
+  // // TEXTE
+
+  // $light-text-primary : #5dfcc6;
+  // // $light-text-primary-hover : #003828;
+  // // $light-text-primary-active : #003828;
+
+  // $light-text-secondary : #b3ccbf;
+  // $light-text-secondary-hover : #98b1a4;
+  // $light-text-secondary-active : #7e968a;
+
+
+  // // BUTTON / ALERT
+  // $light-bg-button : #36dfab;
+  // $light-bg-button-hover : #00c291;
+  // $light-bg-button-active : #00a47b;
+
+  // $light-bg-alert : #ffb4ab;
+  // // $light-bg-alert-hover : n'existe pas
+  // // $light-bg-alert-active : n'existe pas
+
+  // $light-text-button-alert : #003828;
+  // // $light-text-secondary-hover : n'existe pas
+  // // $light-text-secondary-active : n'existe pas
+
+
+  // // BORDURE
+
+  // $light-border : #89938d;
