--- a/front/src/assets/scss/_colors.scss
+++ b/front/src/assets/scss/_colors.scss
@@ -14,8 +14,8 @@ $light-bg-secondary-active : #e7fff2;
 // TEXTE
 
 $light-text-primary : #002116;
-// $light-text-primary-hover : #003828;
-// $light-text-primary-active : #003828;
+$light-text-primary-hover : #003828;
+$light-text-primary-active : #004431;
 
 $light-text-secondary : #4c6358;
 $light-text-secondary-hover : #647c71;
@@ -58,8 +58,8 @@ $light-border : #707974;
   // TEXTE
 
   $dark-text-primary : #5dfcc6;
-  // $dark-text-primary-hover : #003828;
-  // $dark-text-primary-active : #003828;
+  $dark-text-primary-hover : #36dfab;
+  $dark-text-primary-active : #00c291;
 
   $dark-text-secondary : #b3ccbf;
   $dark-text-secondary-hover : #98b1a4;
@@ -103,8 +103,8 @@ $light-border : #707974;
   // // TEXTE
 
   // $light-text-primary : #5dfcc6;
-  // // $light-text-primary-hover : #003828;
-  // // $light-text-primary-active : #003828;
+  // $light-text-primary-hover : #36dfab;
+  // $light-text-primary-active : #00c291;
 
   // $light-text-secondary : #b3ccbf;
   // $light-text-secondary-hover : #98b1a4;
