Improve Input Component

--- a/front/src/assets/scss/_colors.scss
+++ b/front/src/assets/scss/_colors.scss
@@ -38,7 +38,7 @@ $light-text-button-alert : $light-bg-primary;
 
 // BORDURE
 
-$light-border : $light-text-secondary;
+$light-border : rgba(0, 0, 0, 0.12);
 
 
 
