--- a/front/src/assets/css/main.css
+++ b/front/src/assets/css/main.css
@@ -1,6 +1,9 @@
-*{box-sizing: border-box;}
+* {
+  box-sizing: border-box;
+}
 
-body{
+body {
   margin: 0;
   background-color: #f4fff7;
+  font-family: "Anuphan", sans-serif;
 }
